# permission-flow

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish-npm.yml
crates/flow/: Cargo.toml  README.md  build.rs
crates/flow-iced/: Cargo.toml  README.md
crates/flow-iced/examples/: button.rs
crates/flow-iced/src/: lib.rs
crates/flow/PermissionFlow/: Package.swift  README.md  README.zh.md
crates/flow/PermissionFlow/Example/Example/: ContentView.swift
crates/flow/PermissionFlow/Example/Example.xcodeproj/: project.pbxproj
crates/flow/PermissionFlow/Example/Example.xcodeproj/xcshareddata/xcschemes/: Example.xcscheme
crates/flow/PermissionFlow/Sources/PermissionFlow/: PermissionFlowButton.swift  PermissionFlowController.swift  PermissionFlowLocalizer.swift  PermissionFlowPane.swift  PermissionFlowResourceBundle.swift  PermissionStatusRegistry.swift
crates/flow/PermissionFlow/Sources/PermissionFlow/PermissionStatusProviders/: MicrophonePermissionStatusProvider.swift
crates/flow/PermissionFlow/Sources/PermissionFlow/Resources/ar.lproj/: Localizable.strings
crates/flow/PermissionFlow/Sources/PermissionFlow/Resources/de.lproj/: Localizable.strings
crates/flow/PermissionFlow/Sources/PermissionFlow/Resources/en.lproj/: Localizable.strings
crates/flow/PermissionFlow/Sources/PermissionFlow/Resources/es.lproj/: Localizable.strings
crates/flow/PermissionFlow/Sources/PermissionFlow/Resources/fr.lproj/: Localizable.strings
crates/flow/PermissionFlow/Sources/PermissionFlow/Resources/ja.lproj/: Localizable.strings
crates/flow/PermissionFlow/Sources/PermissionFlow/Resources/ko.lproj/: Localizable.strings
crates/flow/PermissionFlow/Sources/PermissionFlow/Resources/pt.lproj/: Localizable.strings
crates/flow/PermissionFlow/Sources/PermissionFlow/Resources/ru.lproj/: Localizable.strings
crates/flow/PermissionFlow/Sources/PermissionFlow/Resources/zh-Hans.lproj/: Localizable.strings
crates/flow/PermissionFlow/Sources/PermissionFlow/Resources/zh-Hant.lproj/: Localizable.strings
crates/flow/PermissionFlow/Sources/PermissionFlow/UI/: AppDropArea.swift  FloatingDropPanel.swift  PermissionFlowPanelView.swift
crates/flow/PermissionFlow/Sources/SystemSettingsKit/: SystemSettings.swift
crates/flow/PermissionFlowShim/: Package.resolved  Package.swift
crates/flow/PermissionFlowShim/Sources/PermissionFlowShimFFI/: PermissionFlowShimFFI.swift
crates/flow/examples/: fire_and_forget.rs
crates/flow/src/: lib.rs
crates/tauri-plugin-permission-flow/: Cargo.toml  README.md  build.rs  package-lock.json  package.json
crates/tauri-plugin-permission-flow/examples/tauri-app/: jsconfig.json  package.json  vite.config.js
crates/tauri-plugin-permission-flow/examples/tauri-app/src/: App.svelte
crates/tauri-plugin-permission-flow/examples/tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/tauri-plugin-permission-flow/examples/tauri-app/src-tauri/capabilities/: default.json
crates/tauri-plugin-permission-flow/examples/tauri-app/src-tauri/src/: lib.rs
crates/tauri-plugin-permission-flow/guest-js/: index.ts
crates/tauri-plugin-permission-flow/permissions/: default.toml
crates/tauri-plugin-permission-flow/permissions/autogenerated/: reference.md
crates/tauri-plugin-permission-flow/permissions/autogenerated/commands/: authorization_state.toml  create.toml  start_flow.toml  stop_current_flow.toml  suggested_host_app_path.toml
crates/tauri-plugin-permission-flow/permissions/schemas/: schema.json
crates/tauri-plugin-permission-flow/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
