[workspace]
members = [
    "crates/flow",
    "crates/flow-iced",
    "crates/tauri-plugin-permission-flow",
]
exclude = [
    "examples/tauri-demo/src-tauri",
    "crates/tauri-plugin-permission-flow/examples/tauri-app/src-tauri",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.39"
license = "MIT"
authors = ["Victor <victorayo206@gmail.com>"]
homepage = "https://github.com/veecore/permission-flow"
repository = "https://github.com/veecore/permission-flow"
rust-version = "1.85"
